--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 			<!-- link to main stylesheet -->
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
-		<body>
+		<body style="background-image:url('https://1001freedownloads.s3.amazonaws.com/vector/thumb/82772/circuit-board.png')">
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
